[DO NOT MERGE] JAVA 17 BWARE COMMIT
merge